--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="w3-card-4 w3-padding-16 w3-margin w3-round-large">
         <div class="w3-container  w3-round-large w3-center w3-padding-16 w3-margin" 
         style="box-shadow: 5px 5px 5px #14141499; background-color: #3f3f3f; text-shadow:1px 1px 0 rgb(66, 66, 66); color: #d6d6d6;">
-        <p id="mainText" style="font-weight: bolder; font-family: Georgia, 'Times New Roman', Times, serif; font-size: large;"></p>
+        <p id="mainText" style="font-weight: bolder; font-family: Georgia, 'Times New Roman', Times, serif; font-size: large;">Don't get admitted to NSU</p>
         </div>
         <div class="w3-container w3-center w3-padding-16 w3-margin" ">
             <h6 style="color: rgb(172, 172, 156);">
