--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Advices</title>
 </head>
 <body style="background-color: rgb(81, 82, 79); color: #d6d6d6">
     <div class="w3-card-4">
