--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </h6>
         </div>
         <div class="w3-container w3-round-large  w3-center w3-padding-16 w3-margin w3-hover-shadow" style="background-color: #3f3f3f; box-shadow: 5px 5px 5px #6b646499;">
-            <button id ="advBtn" class="w3-button w3-round-large w3-hover-dark-gray" style="background-color: rgb(52, 52, 53); border: none; outline: none;" onClick="buttonControl(); updateAdviceOnSite(); ">NEW <br> ADVICE</button>
+            <button id ="advBtn" class="w3-button w3-round-large w3-hover-dark-gray" style="background-color: rgb(52, 52, 53); border: none; outline: none;" onClick="buttonControl();; ">NEW <br> ADVICE</button>
         </div>
         
     </div>
